ASSETS/SASS/_images.scss
// STARTS banner at top of page

img {
  object-fit: cover;
  object-position: center center;
}

.col-4 {
  width: 25%;
  float: left;
  img {
    width: 95%;
  }
}

.rose-image {
  display: inline-block;
  margin: 10px;
}
// ENDS banner at top of page

// STARTS images of food on homepage

.sourdough-img {
  &:hover {
    height: 280px;
    width: 350px;
  }
  @media (max-width: 750px) {
    height: 80px;
  }
}

.cookies-img,
.moroccan-meatballs-img,
.crepes-img {
  &:hover {
    height: 330px;
    width: 350px;
  }
  @media (max-width: 750px) {
    height: 130px;
  }
}

.chicken-soup,
.Beef-Stroganoff-img {
  &:hover {
    height: 270px;
    width: 350px;
  }
  @media (max-width: 750px) {
    height: 70px;
  }
}

.buns-img {
  &:hover {
    height: 380px;
    width: 350px;
  }
  @media (max-width: 750px) {
    height: 140px;
  }
}

.brownies-img {
  &:hover {
    height: 420px;
    width: 350px;
  }
  @media (max-width: 750px) {
    height: 180px;
  }
}

.roast-chicken-img {
  &:hover {
    height: 250px;
    width: 350px;
  }
  @media (max-width: 750px) {
    height: 90px;
  }
}

.ricecrispies-img {
  &:hover {
    height: 320px;
    width: 350px;
  }
  @media (max-width: 750px) {
    height: 120px;
  }
}

.dan-dan-noodle-img {
  &:hover {
    height: 270px;
    width: 350px;
  }
  @media (max-width: 750px) {
    height: 70px;
  }
}

.chickenwraps-img {
  &:hover {
    height: 370px;
    width: 350px;
  }
  @media (max-width: 750px) {
    height: 150px;
  }
}

// ENDS images of food on homepage

// START images for recipe pages

.recipe-img {
  img {
    width: 95%;
    @media (max-width: 750px) {
      height: 150px;
    }
  }
}

// START image carousel slider on selection pages (eg. sweets, breads, chicken)

.image-banner {
  margin-top: 20px;
  overflow: hidden;
  white-space: nowrap;
  margin: 0 auto;
  &:hover .image-slider {
    animation-play-state: paused;
    cursor: pointer;
  }
}

.image-slider {
  display: inline-block;
  animation: 50s slider infinite linear;
  overflow: hidden;
  padding: 5px;
  padding-right: 5px;
  img {
    width: 15%;
    margin: 10px;
  }
  @media (max-width: 750px) {
    height: 100px;
    width: 100%;
  }
}

@keyframes slider {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}

//ENDS image carousel slider on selection pages (eg. sweets, breads, chicken)

